--- a/proyectom/prodesarrollo/templates/paginas/perfil.html
+++ b/proyectom/prodesarrollo/templates/paginas/perfil.html
@@ -24,50 +24,70 @@
 </head>
 <body class="bg-black">
     <div class="flex">
-        <nav class="fixed h-screen w-[72px] xl:w-[250px] border-r border-zinc-800 px-1 py-1 flex flex-col items-start">
+                <nav class="fixed h-screen w-[72px] xl:w-[250px] border-r border-zinc-800 px-1 py-1 flex flex-col items-start">
             <div class="py-4 mb-4 mt-2">
                 <span class="logo-font text-5xl text-white hidden xl:inline mx-4">Instapp</span>
             </div>
             
-            <a href="{% url 'inicio' %}" class="flex w-full items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+            <a href="{% url 'inicio' %}" class="flex w-[98%] items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
                 <svg class="sidebar-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M9.005 16.545a2.997 2.997 0 012.997-2.997h0A2.997 2.997 0 0115 16.545V22h7V11.543L12 2 2 11.543V22h7.005z"/></svg>
-                <span class="hidden xl:inline">Inicio</span>
+                <span class="hidden xl:inline ml-2">Inicio</span>
             </a>
 
-            <a href="#" class="flex w-full gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
-                <svg class="sidebar-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M19 10.5A8.5 8.5 0 1110.5 2a8.5 8.5 0 018.5 8.5z"/><path fill="none" stroke="currentColor" d="M16.511 16.511L22 22"/></svg>
-                <span class="hidden xl:inline">Buscar</span>
+                <button onclick="toggleSearch()" class="flex w-[98%] gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+                <img src="{% static 'myapp/img/busqueda.png' %}" alt="busqueda" class="w-7 h-7">
+                    <span class="hidden xl:inline ml-1">Buscar</span>
+                </button>
+
+                <div id="searchPanel" class="hidden absolute left-16 w-96 bg-neutral-800 rounded-xl shadow-xl mt-2 z-50">
+                    <div class="p-4">
+                        <div class="flex items-center gap-3 pb-3 border-b border-neutral-700">
+                            <svg class="w-4 h-4 text-neutral-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                            </svg>
+                            <input type="text"
+                                id="searchInput"
+                                class="w-full bg-transparent text-white placeholder-neutral-400 focus:outline-none text-sm"
+                                placeholder="Buscar">
+                        </div>
+                    </div>
+                    <div id="searchResults" class="max-h-[400px] overflow-y-auto">
+
+                    </div>
+                    <div id="loadingIndicator" class="hidden p-4 text-center text-neutral-400">
+                        <span>Buscando...</span>
+                    </div>
+                </div>
+
+            <a href="#" class="flex w-[98%] gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+                <img src="{% static 'myapp/img/explorar.png' %}" alt="busqueda" class="w-7 h-7">
+                <span class="hidden xl:inline ml-1">Explorar</span>
             </a>
 
-            <a href="#" class="flex w-full gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
-                <svg class="sidebar-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0z"/></svg>
-                <span class="hidden xl:inline">Explorar</span>
+            <a href="#" class="flex  w-[98%] gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+                <img src="{% static 'myapp/img/reels.png' %}" alt="busqueda" class="w-7 h-7">
+                <span class="hidden xl:inline ml-1">Reels</span>
             </a>
 
-            <a href="#" class="flex  w-full gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
-                <svg class="sidebar-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0z"/></svg>
-                <span class="hidden xl:inline">Reels</span>
+            <a href="{% url 'mensajes' %}" class="flex w-[98%] gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+                <img src="{% static 'myapp/img/mensajes.png' %}" alt="busqueda" class="w-7 h-7">
+                <span class="hidden xl:inline ml-1">Mensajes</span>
             </a>
 
-            <a href="{% url 'mensajes' %}" class="flex w-full gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
-                <svg class="sidebar-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M12.003 2.001a9.705 9.705 0 110 19.4 10.876 10.876 0 01-2.895-.384.798.798 0 00-.533.04l-1.984.876a.801.801 0 01-1.123-.708l-.054-1.78a.806.806 0 00-.27-.569 9.49 9.49 0 01-3.14-7.175 9.65 9.65 0 0110-9.7z" stroke="currentColor" strokeMiterlimit="10"/></svg>
-                <span class="hidden xl:inline">Mensajes</span>
-            </a>
-
-            <a href="#" class="flex w-full items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+            <a href="#" class="flex w-[98%] items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
                 <svg class="sidebar-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M16.792 3.904A4.989 4.989 0 0121.5 9.122c0 3.072-2.652 4.959-5.197 7.222-2.512 2.243-3.865 3.469-4.303 3.752-.477-.309-2.143-1.823-4.303-3.752C5.141 14.072 2.5 12.167 2.5 9.122a4.989 4.989 0 014.708-5.218 4.21 4.21 0 013.675 1.941c.84 1.175.98 1.763 1.12 1.763s.278-.588 1.11-1.766a4.17 4.17 0 013.679-1.938m0-2a6.04 6.04 0 00-4.797 2.127 6.052 6.052 0 00-4.787-2.127A6.985 6.985 0 00.5 9.122c0 3.61 2.55 5.827 5.015 7.97.283.246.569.494.853.747l1.027.918a44.998 44.998 0 003.518 3.018 2 2 0 002.174 0 45.263 45.263 0 003.626-3.115l.922-.824c.293-.26.59-.519.885-.774 2.334-2.025 4.98-4.32 4.98-7.94a6.985 6.985 0 00-6.708-7.218z"/></svg>
-                <span class="hidden xl:inline">Notificaciones</span>
+                <span class="hidden xl:inline ml-2">Notificaciones</span>
             </a>
             <div class="w-[240px] relative inline-block text-left">
 
-                <button onclick="toggleMenu()" class="flex w-full items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
-                    <svg class="sidebar-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M2 12v3.45c0 2.849.698 4.005 1.606 4.944.94.909 2.098 1.608 4.946 1.608h6.896c2.848 0 4.006-.7 4.946-1.608C21.302 19.455 22 18.3 22 15.45V8.552c0-2.849-.698-4.006-1.606-4.945C19.454 2.7 18.296 2 15.448 2H8.552c-2.848 0-4.006.699-4.946 1.607C2.698 4.547 2 5.703 2 8.552z" fill="none" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"/><line fill="none" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" x1="6.545" x2="17.455" y1="12.001" y2="12.001"/><line fill="none" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" x1="12.003" x2="12.003" y1="6.545" y2="17.455"/></svg>
-                <span class="hidden xl:inline">Crear</span>
+                <button onclick="toggleMenu()" class="flex w-[98%] items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+                    <img src="{% static 'myapp/img/mas.png' %}" alt="busqueda" class="w-6 h-6">
+                <span class="hidden xl:inline ml-2">Crear</span>
                 </button>
 
 
                 <div id="dropdownMenu" class="hidden absolute w-full origin-top-right rounded-md bg-neutral-800 text-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none">
-                    <button id="abrirModal" class="flex w-full items-center gap-2 px-4 py-4 rounded-md hover:bg-neutral-700">Publicación
+                    <button id="abrirModal" class="flex w-[98%] items-center gap-2 px-4 py-4 rounded-md hover:bg-neutral-700">Publicación
                     <img src="{% static 'myapp/img/camara.png' %}" alt="publi" class="w-8 h-8 ml-[45%]">
                     </button>
                     <a href="#" class="flex items-center gap-2 px-4 py-4 rounded-md hover:bg-neutral-700">
@@ -85,20 +105,20 @@
                 </div>
             </div>
 
-            <a href="{% url 'perfil' user.username %}" class="flex w-full items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+            <a href="{% url 'perfil' user.username %}" class="flex w-[98%] items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
                 <img src="{{ sugerencia.usuario.profile.avatar.url|default:'/media/perfiles/perfil_default.jpg' }}" alt="Perfil" class="w-6 h-6 rounded-full">
-                <span class="hidden xl:inline">Perfil</span>
+                <span class="hidden xl:inline ml-2">Perfil</span>
             </a>
             
-            <a href="https://www.meta.ai/" class="flex w-full items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-[110%]">
+            <a href="https://www.meta.ai/" class="flex w-[98%] items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-[104.5%]">
             <img src="{% static 'myapp/img/ai.png' %}" alt="ai" class="w-6 h-6">
-            <span class="hidden xl:inline">Meta AI</span>
+            <span class="hidden xl:inline ml-2">Meta AI</span>
             </a>
 
             <div class="w-[240px] relative inline-block text-left">
-                <button onclick="Menumas()" class="flex w-full items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
-                    <svg class="sidebar-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M2 12v3.45c0 2.849.698 4.005 1.606 4.944.94.909 2.098 1.608 4.946 1.608h6.896c2.848 0 4.006-.7 4.946-1.608C21.302 19.455 22 18.3 22 15.45V8.552c0-2.849-.698-4.006-1.606-4.945C19.454 2.7 18.296 2 15.448 2H8.552c-2.848 0-4.006.699-4.946 1.607C2.698 4.547 2 5.703 2 8.552z" fill="none" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"/><line fill="none" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" x1="6.545" x2="17.455" y1="12.001" y2="12.001"/><line fill="none" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" x1="12.003" x2="12.003" y1="6.545" y2="17.455"/></svg>
-                <span class="hidden xl:inline">Más</span>
+                <button onclick="Menumas()" class="flex w-[98%] items-center gap-4 px-3 py-3 rounded-lg hover:bg-zinc-800 mx-2 mt-3">
+                    <img src="{% static 'myapp/img/menu.png' %}" alt="busqueda" class="w-6 h-6">
+                <span class="hidden xl:inline ml-2">Más</span>
                 </button>
 
                 <div id="MasMenu" class="hidden absolute bottom-full w-full origin-top-right rounded-md bg-neutral-800 text-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none">
